--- a/Naveen/first'spage.html
+++ b/Naveen/first'spage.html
@@ -97,7 +97,7 @@
         <div class="container1">
             <h3 class="container3">PORTFOLIO</h3><br><br>
             <div class="container4">
-                <img id="normalImage" class="sampleimg" src="C:\Naveen\profile.png" alt="no IMAGE--"><br><br>
+                <img id="normalImage" class="sampleimg" src="\Naveen\profile.png" alt="no IMAGE--"><br><br>
                 <div class="ref">
                     <h3 class="href" id="name">NAME: YOUR NAME</h3>
                     <h3 class="href" id="role">ROLL: YOUR ROLE</h3>
@@ -109,7 +109,7 @@
             <h3 class="container4">TEAM MEMBERS</h3>
             <div class="container5">
                 <a href="Naveen\naveen.html" onmouseover="startRedirect('Naveen\\naveen.html', 'Naveen\\naveenfirst.png', 'NAVEEN KUMAR', 'WEB DEVELOPER')" onmouseout="resetProfile()">
-                    <img class="container6" src="Naveen\naveenfirst.png" alt="NO IMAGE">
+                    <img class="container6" src="\Naveen\naveenfirst.png" alt="NO IMAGE">
                 </a>
                 <div class="ref1">
                     <ul>
@@ -127,13 +127,13 @@
                     </ul>
                 </div>
                 <a href="Naveen\nithi.html" onmouseover="startRedirect('Naveen\\nithi.html', 'Naveen\\nithifirst.png', 'NITHYANANTHAM', 'FRONT END DEVELOPER')" onmouseout="resetProfile()">
-                    <img class="container8" src="Naveen\nithifirst.png" alt="NO IMAGE">
+                    <img class="container8" src="\Naveen\nithifirst.png" alt="NO IMAGE">
                 </a>
             </div>
 
             <div class="container9">
                 <a href="Naveen\pushpa.html" onmouseover="startRedirect('Naveen\\pushpa.html', 'Naveen\\pushpafirst.png', 'PUSHPARAJ', 'UI/UX DESIGNER')" onmouseout="resetProfile()">
-                    <img class="container10" src="Naveen\pushpafirst.png" alt="NO IMAGE">
+                    <img class="container10" src="\Naveen\pushpafirst.png" alt="NO IMAGE">
                 </a>
                 <div class="ref3">
                     <ul>
