--- a/Naveen/first'spage.html
+++ b/Naveen/first'spage.html
@@ -113,8 +113,8 @@
                 </a>
                 <div class="ref1">
                     <ul>
-                        <li><a href="Naveen\naveen.html">NAME: NAVEEN KUMAR</a></li><br>
-                        <li><a href="Naveen\naveen.html">ROLL: WEB DEVELOPER</a></li>
+                        <li><a href="\Naveen\naveen.html">NAME: NAVEEN KUMAR</a></li><br>
+                        <li><a href="\Naveen\naveen.html">ROLL: WEB DEVELOPER</a></li>
                     </ul>
                 </div>
             </div>
@@ -122,23 +122,23 @@
             <div class="container7">
                 <div class="ref2">
                     <ul>
-                        <li><a href="Naveen\nithi.html">NAME: NITHYANANTHAM</a></li><br>
-                        <li><a href="Naveen\nithi.html">ROLL: FRONT END DEVELOPER</a></li>
+                        <li><a href="\Naveen\nithi.html">NAME: NITHYANANTHAM</a></li><br>
+                        <li><a href="\Naveen\nithi.html">ROLL: FRONT END DEVELOPER</a></li>
                     </ul>
                 </div>
-                <a href="Naveen\nithi.html" onmouseover="startRedirect('Naveen\\nithi.html', 'Naveen\\nithifirst.png', 'NITHYANANTHAM', 'FRONT END DEVELOPER')" onmouseout="resetProfile()">
+                <a href="\Naveen\nithi.html" onmouseover="startRedirect('Naveen\\nithi.html', 'Naveen\\nithifirst.png', 'NITHYANANTHAM', 'FRONT END DEVELOPER')" onmouseout="resetProfile()">
                     <img class="container8" src="\Naveen\nithifirst.png" alt="NO IMAGE">
                 </a>
             </div>
 
             <div class="container9">
-                <a href="Naveen\pushpa.html" onmouseover="startRedirect('Naveen\\pushpa.html', 'Naveen\\pushpafirst.png', 'PUSHPARAJ', 'UI/UX DESIGNER')" onmouseout="resetProfile()">
+                <a href="\Naveen\pushpa.html" onmouseover="startRedirect('Naveen\\pushpa.html', 'Naveen\\pushpafirst.png', 'PUSHPARAJ', 'UI/UX DESIGNER')" onmouseout="resetProfile()">
                     <img class="container10" src="\Naveen\pushpafirst.png" alt="NO IMAGE">
                 </a>
                 <div class="ref3">
                     <ul>
-                        <li><a href="Naveen\pushpa.html">NAME: PUSHPARAJ</a></li><br>
-                        <li> <a href="Naveen\pushpa.html">ROLL: UI/UX DESIGNER</a></li>
+                        <li><a href="\Naveen\pushpa.html">NAME: PUSHPARAJ</a></li><br>
+                        <li> <a href="\Naveen\pushpa.html">ROLL: UI/UX DESIGNER</a></li>
                     </ul>
                 </div>
             </div>
