--- a/Naveen/first'spage.html
+++ b/Naveen/first'spage.html
@@ -97,7 +97,7 @@
         <div class="container1">
             <h3 class="container3">PORTFOLIO</h3><br><br>
             <div class="container4">
-                <img id="normalImage" class="sampleimg" src="\profile.png" alt="no IMAGE--"><br><br>
+                <img id="normalImage" class="sampleimg" src="profile.png" alt="no IMAGE--"><br><br>
                 <div class="ref">
                     <h3 class="href" id="name">NAME: YOUR NAME</h3>
                     <h3 class="href" id="role">ROLL: YOUR ROLE</h3>
