--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELCOME PAGE</title>
-    <link type="image/png" sizes="16x16" rel="icon" href="C:\Naveen\title.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="Naveen\title.png">
 
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
